ask8/jaa-api-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: jaa-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: jaa-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaa-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jaa-api
  template:
    metadata:
      labels:
        app: jaa-api
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
